Update Analysing Hacker News Posts Project.ipynb

--- a/Analysing Hacker News Posts Project/Analysing Hacker News Posts Project.ipynb
+++ b/Analysing Hacker News Posts Project/Analysing Hacker News Posts Project.ipynb
@@ -12,7 +12,7 @@
     "<p>Today, we explore the dataset that contains posts from the Hacker News website from the last 12 months up to the date of September 26 2016 and the scrapped data can be found originally <a href = \"https://www.kaggle.com/hacker-news/hacker-news-posts\">here</a>. The Hacker News website is a social media site that specifically focuses on computer science/entrepreneurship that has content which generally attracts the curiosity of likeminded users. Futhermore, we are interested in posts that has title names that include 'Ask HN' or 'Show HN' which implies that the user either wants to ask the Hacker News (HN) community a question or show the Hacker News community their project/s or findings.</p>\n",
     "\n",
     "<h2>Objective</h2>\n",
-    "<p>Our goals today is to find out which posts with those titles ('Ask HN' or 'Show HN') receive more comments on average. And also does a post at a certain hour gain more post then another posted at a different hour of the day?</p>\n",
+    "<p>Our goals today is to find out which posts with those titles ('Ask HN' or 'Show HN') receive more comments on average. And also does a post at a certain hour gain more comments then another posted at a different hour of the day?</p>\n",
     "\n",
     "<h2>Importing the data</h2>\n",
     "<p>First things first, let's import the dataset and inspect the first five rows of the data to get an idea of what we are dealing with:</p>"
