Update Analysing Hacker News Posts Project.ipynb

--- a/Analysing Hacker News Posts Project/Analysing Hacker News Posts Project.ipynb
+++ b/Analysing Hacker News Posts Project/Analysing Hacker News Posts Project.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Comment:</b> Here, we notice that the dataset has 7 columns which means each row contains 7 variables and we can go to the author of the dataset to get a description of what each dataset represents.\n",
+    "<b>Comment:</b> Here, we notice that the dataset has 7 columns which means each row contains 7 variables and we can go to the author of the dataset to get a description of what each variable represents.\n",
     "\n",
     "<b>Description of the columns:</b>\n",
     "<ul>\n",
